--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@nutui/nutui": "^2.0.4",
+    "axios": "^0.18.0",
     "jquery": "^3.3.1",
     "vue": "^2.6.6",
-    "vue-router": "^3.0.2"
+    "vue-axios": "^2.1.4",
+    "vue-router": "^3.0.2",
+    "vue-wechat-title": "^2.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
